test/scc/decl/semantic-errors/019.t
void test()
{
    static int foo();
}